<resources>
    <string name="invalid_credentials">Correo y/o contraseña inválidos</string>
    <string name="app_name">Ceres mobile</string>
    <string name="im_doctor">Soy médico</string>
    <string name="im_patient">Soy paciente</string>
    <string name="patient">Paciente</string>
    <string name="doctor">Médico</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="log_in">Ingresar</string>
    <string name="welcome">Bienvenido a Ceres</string>
    <string name="sign_in">Registrarse</string>
    <string name="log_out">Salir</string>
    <string name="hello">Hola</string>
    <string name="connection_error">Error de conexión</string>
    <string name="logging_out">Cerrando sesión</string>
    <string name="log_out_confirmation">Seguro que desea cerrar sesión?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="email_validation">Falta email</string>
    <string name="invalid_format">Formato incorrecto</string>
    <string name="password_validation">Falta contraseña</string>
    <string name="error">Error</string>
    <string name="missing_parameters">Faltan parámetros</string>

    <string name="register_me">Registrarme</string>
    <string name="password_confirm">Repite tu contraseña</string>
    <string name="confirma_pass">Repite tu contraseña</string>
    <string name="doctor_code">Código médico</string>
    <string name="mothers_last_name">Apellido materno</string>
    <string name="last_name">Apellido paterno</string>
    <string name="name">Nombre</string>
    <string name="user_type_invalid">Tipo de usuario incorrecto</string>

    <string name="name_validation">Falta nombre</string>
    <string name="mothers_last_name_validation">Falta apellido materno</string>
    <string name="last_name_validation">Falta apellido paterno</string>
    <string name="medic_code_validation">Falta código médico</string>
    <string name="falta_confirmacion">Falta confirmación</string>
    <string name="passwords_do_not_match">Contraseñas no coinciden</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="sex_validation">Falta sexo</string>
    <string name="birth_date_validation">Falta fecha de nacimiento</string>
    <string name="repeated_email">El correo electrónico ya fue usado</string>
    <string name="professional_license">Cédula profesional</string>
    <string name="professional_license_validation">Falta cédula profesional</string>
    <string name="hello_doctor">Hola medico</string>
    <string name="hello_patient">Hola paciente</string>
    <string name="fruits">Frutas</string>
    <string name="new_token">Nuevo token</string>
    <string name="glucose">Glucosa</string>
    <string name="lipids">Lípidos</string>
    <string name="carbohydrates">Carbohidratos</string>
    <string name="proteins">Proteínas</string>
    <string name="record_glucose">Registrar glucosa</string>

    <string name="sugar">Azúcar</string>
    <string name="save">Guardar</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="begin">Inicio</string>
    <string name="generate_diet">Generar dieta</string>
    <string name="s_fecha_glucosa">Fecha</string>
    <string name="patients">Pacientes</string>
    <string name="generate_code">Generar código</string>
    <string name="age">Edad</string>
    <string name="sex">Sexo</string>
    <string name="show_diets">Ver dietas</string>
    <string name="show_my_diets">Ver mis dietas</string>
    <string name="weight">Peso</string>
    <string name="size">Talla</string>
    <string name="breakfast">Desayuno</string>
    <string name="breakfast_schedule">7:00 am - 8:00 am</string>
    <string name="collation_1">Colación 1</string>
    <string name="collation_1_schedule">11:00 am - 12:00 am</string>
    <string name="calories">Calorías</string>
    <string name="schedule">Horario</string>
    <string name="two_points">:</string>
    <string name="blank_space"> </string>
    <string name="meal">Comida</string>
    <string name="meal_schedule">2:00 pm - 3:00 pm</string>
    <string name="collation_2">Colación 2</string>
    <string name="collation_2_schedule">5:00 pm - 6:00 pm</string>
    <string name="shield_android_string_fingerprint_icon_content_description">shield @android:string/fingerprint_icon_content_description</string>
    <string name="bolt_android_string_fingerprint_icon_content_description">bolt @android:string/fingerprint_icon_content_description</string>
    <string name="calendar_android_string_fingerprint_icon_content_description">calendar @android:string/fingerprint_icon_content_description</string>
    <string name="gray_star_android_string_fingerprint_icon_content_description">gray star @android:string/fingerprint_icon_content_description</string>
    <string name="dinner">Cena</string>
    <string name="dinner_schedule">9:00 pm - 10:00 pm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height">Estatura</string>
    <string name="IMC">I.M.C.</string>
    <string name="observations">Observaciones</string>
    <string name="generate_medic_code">Generar código médico</string>
    <string name="send_code">Enviar código</string>

    <!--string name="DATE_FORMAT">dd/MM/yyyy</string>
    <string name="EMAIL">email</string>
    <string name="KEYWORD">keyword</string>
    <string name="ERROR">ERROR</string>
    <string name="OK">OK</string>
    <string name="TOKEN">TOKEN</string>
    <string name="VOID">VOID</string>

    <string name="URL_SERVER">http://35.202.245.109</string>
    <string name="URL_REGISTER">$URL_SERVER/tt-escom-diabetes/session/usuarios</string>
    <string name="URL_LOGIN">$URL_SERVER/tt-escom-diabetes/session/login</string>
    <string name="URL_DATOS">$URL_SERVER/tt-escom-diabetes/ceres/usuarios/</string>
    <string name="URL_PATIENT">$URL_SERVER/tt-escom-diabetes/ceres/pacientes</string>
    <string name="URL_MEDICO">$URL_SERVER/tt-escom-diabetes/ceres/medico</string>

    <string name="USER_JSON">userJSON</string>
    <string name="LOGIN">Login</string>
    <string name="ERROR_IO">Error IO</string>
    <string name="AUTH_ERROR">Error autenticación</string>
    <string name="SERVER_ERROR">Error servidor</string>
    <string name="PARSE_ERROR">Error de cadena</string>
    <string name="UNKNOWN_ERROR">Error desconocido</string>

    <string name="ID_DIET">idDieta</string>
    <string name="ID_DIET_2">id_DIETA</string>
    <string name="ID_PATIENT">idPaciente</string>
    <string name="ID_DOCTOR">idMedico</string>
    <string name="DESCRIPTION">descripcion</string>
    <string name="AVAILABLE_FOODS">alimentosDisponibles</string>
    <string name="ASSIGN_DATE">fechaAsignacion</string>

    <string name="ID_MEDICAL_HISTORY">idHistorialClinico</string>
    <string name="WEIGHT">peso</string>
    <string name="SIZE">talla</string>
    <string name="DATE">fecha</string>
    <string name="SUGAR">azucar</string>
    <string name="PROTEINS">proteinas</string>
    <string name="HEIGHT">estatura</string>
    <string name="IMC">imc</string>
    <string name="FULL_NAME">nombreComppleto</string>
    <string name="PHYSICAL_ACTIVITY">actividadFisica</string>
    <string name="HISTORY_DATE">fechaHistorial</string>

    <string name="SUGAR_VALIDATION">Falta azúcar</string>
    <string name="HOUR_VALIDATION">Falta hora</string>
    <string name="DATE_VALIDATION">Falta fecha</string>
    <string name="POSITION">Position</string>

    <string name="BREAKFAST">Desayuno</string>
    <string name="COLLATION_1">C1</string>
    <string name="MEAL">Comida</string>
    <string name="COLLATION_2">C2</string>
    <string name="DINNER">Cena</string>

    <string name="ID_FOOD">idAlimento</string>
    <string name="FOOD_TYPE">tipoAlimento</string>
    <string name="FOOD">alimento</string>
    <string name="QUANTITY">cantidad</string>
    <string name="UNIT">unidad</string>
    <string name="WEIGHT_BRG">pesoBgr</string>
    <string name="WEIGHT_NGR">pesoNgr</string>
    <string name="ENERGY">energia</string>
    <string name="PROTEIN">proteina</string>
    <string name="LIPIDS">lipidos</string>
    <string name="CARBOHYDRATES">carbohidratos</string>
    <string name="FIBER_GR">fibraGr</string>
    <string name="VITAMIN_A">vitaminaA</string>
    <string name="ASCORBIC_ACID">acidoAscorbico</string>
    <string name="FOLIC_ACID">acidoFolico</string>
    <string name="IRON_NO">hierroNo</string>
    <string name="POTASSIUM">potasio</string>
    <string name="SUGAR_GR">azucarGr</string>
    <string name="CHARGE_GL">cargaGl</string>
    <string name="SUGAR_PE">azucarPe</string>
    <string name="CHOLESTEROL">colesterol</string>
    <string name="AG_SATURATED">agSaturados</string>
    <string name="AG_M_SATURATED">agMsaturados</string>
    <string name="AG_P_SATURATED">agPsaturados</string>
    <string name="CALCIUM">calcio</string>
    <string name="SELENIUM">selenio</string>
    <string name="PHOSPHOR">fosforo</string>
    <string name="POTASSIUM_P">potasioP</string>
    <string name="IRON">hierro</string>
    <string name="SODIUM">sodio</string>

    <string name="ID_USER">id_USUARIO</string>
    <string name="NAME">nombre</string>
    <string name="SEX">sexo</string>
    <string name="AGE">edad</string>
    <string name="AP_PAT">ap_PAT</string>
    <string name="AP_MAT">ap_MAT</string>
    <string name="FEC_NAC">fec_NAC</string>

    <string name="RECEIVER">destinatario</string>
    <string name="MEDIC_NAME">nombreMedico</string>
    <string name="MEDIC_CODE">codigoMedico</string>
    <string name="SENDER">remitente</string>

    <string name="PROFESSIONAL_LICENSE">cedulaProfesional</string>

    <string name="ID_ROLE">idRol</string>

    <string name="MESSAGE">mensaje</string>
    <string name="RESPONSE">respuesta</string-->

    <string name="no_diets_found">No se encontraron dietas asignadas.</string>
    <string name="notification_test">Prueba de notificaciones</string>
    <string name="channel_name">Ceres mobile channel</string>
    <string name="channel_description">Ceres mobile channel description</string>
    <string name="mg_dl">%1$.2f mg/dl</string>
    <string name="hypen">-</string>
    <string name="letters">ABCDEFGHIJKLMNÑOPQRSTUVWXYZÁÉÍÓÚ abcdefghijklmnñopqrstuvwxyzáéíóú</string>
    <string name="invalid_email_format">Formato de email incorrecto</string>
    <string name="patients_dont_found">No se encontraron pacientes.</string>
    <string name="action_search">Buscar</string>
    <string name="search_hint">Escriba aquí para buscar…</string>
    <string name="toolbar_title">Ceres</string>
    <string name="no_patients_found">No se encontraron pacientes</string>
    <string name="no_information_found">No se encontró la información para el paciente"</string>

    <string name="kilograms_prefix">%1$.2f Kg</string>
    <string name="meters_prefix">%1$.2f m</string>
    <string name="centimeters_prefix">%1$.2f cm</string>
    <string name="percentage_prefix">%1$.2f %%</string>
    <string name="ceres">Ceres</string>

</resources>
