<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

    <ImageView
        android:id="@+id/chevron_right"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_chevron_right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/chevron_right"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/patient_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"/>

        <TextView
            android:id="@+id/patient_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"/>

        <TextView
            android:id="@+id/medical_history_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/patient_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sugar"/>

    </LinearLayout>

</RelativeLayout>